--- a/2020 US Ozone Nonattainment Analysis.Rmd
+++ b/2020 US Ozone Nonattainment Analysis.Rmd
@@ -26,6 +26,8 @@ library(readxl)
 library(geojsonsf)
 library(sp)
 library(sf)
+library(RCurl)
+library(leafpop)
 ```
 
 
@@ -273,7 +275,7 @@ tag.map.title <- tags$style(HTML("
     padding-right: 8px; 
     background: rgba(192,192,192,1);
     font-weight: bold;
-    font-size: 20px;
+    font-size: 18px;
   }
 "))
 
@@ -282,27 +284,27 @@ title <- tags$div(
   tag.map.title, HTML(paste0("AirNow Data From ",ozone_start_date," Through ",Date_Today))
 )  
 
-# reading GeoJSON file for NAA boundaries
-US_2015_O3_NAA <- geojson_sf("US_2015_ozone_NAA_4326.geojson")
-
-#unique list of NAAs and the design value site for each, based upon highes draft 2020 DV
-NAA_DV_Site <- US_2020DV %>%
-  select(Monitor_ID,SiteName,NAA_Name,Draft_DV_18_20) %>%
-  filter(!is.na(NAA_Name)) %>%
-  group_by(NAA_Name) %>% 
-  arrange(desc(Draft_DV_18_20)) %>% 
-  slice(1)
-
-#design value data of NAA_DV_Site is merged with the spatial data of the NAA polygons, to create a new layer
-new_NAA_Polygons <- merge(US_2015_O3_NAA,NAA_DV_Site,by.x='area_name',by.y='NAA_Name')
+# # reading GeoJSON file for NAA boundaries
+# US_2015_O3_NAA <- geojson_sf("US_2015_ozone_NAA_4326.geojson")
+# 
+# #unique list of NAAs and the design value site for each, based upon highes draft 2020 DV
+# NAA_DV_Site <- US_2020DV %>%
+#   select(Monitor_ID,SiteName,NAA_Name,Draft_DV_18_20) %>%
+#   filter(!is.na(NAA_Name)) %>%
+#   group_by(NAA_Name) %>% 
+#   arrange(desc(Draft_DV_18_20)) %>% 
+#   slice(1)
+# 
+# #design value data of NAA_DV_Site is merged with the spatial data of the NAA polygons, to create a new layer
+# new_NAA_Polygons <- merge(US_2015_O3_NAA,NAA_DV_Site,by.x='area_name',by.y='NAA_Name')
 
 # # reading GeoJSON file for state
 # US_states <- geojson_sf("US_States_4326.geojson")
 
-#creates a orange color palette for the various NAA classifications
-naa_pal <- colorFactor(
-  palette = "Oranges",
-  domain = US_2015_O3_NAA$classification)
+# #creates a orange color palette for the various NAA classifications
+# naa_pal <- colorFactor(
+#   palette = "Oranges",
+#   domain = US_2015_O3_NAA$classification)
 
 # The Leaflet map widget is set to a variable "map".
 # Layers are defined for use with an interactive layer display.
@@ -314,19 +316,19 @@ map_combined <- leaflet() %>%
   #a basemap is added
   addProviderTiles(providers$CartoDB.Positron) %>%
   
-  # a polygon layer is added for the US NAA object and its outline color and opacity are set
-  addPolygons(data=new_NAA_Polygons,
-              stroke = TRUE,
-              weight = 2,
-              color = "black",
-              smoothFactor = 0.2,
-              fillOpacity = .8,
-              fillColor = ~naa_pal(classification),
-              popup = as.character(paste0(new_NAA_Polygons$area_name," NAA","<br>",
-                                          "Classification: ",new_NAA_Polygons$classification,"<br>",
-                                          "Design Value Site Name: ",new_NAA_Polygons$SiteName,"<br>",
-                                          "Design Value Site ID: ",new_NAA_Polygons$Monitor_ID,"<br>",
-                                          "Design Value Site 2020 DV: ",new_NAA_Polygons$Draft_DV_18_20))) %>%
+  # # a polygon layer is added for the US NAA object and its outline color and opacity are set
+  # addPolygons(data=new_NAA_Polygons,
+  #             stroke = TRUE,
+  #             weight = 2,
+  #             color = "black",
+  #             smoothFactor = 0.2,
+  #             fillOpacity = .8,
+  #             fillColor = ~naa_pal(classification),
+  #             popup = as.character(paste0(new_NAA_Polygons$area_name," NAA","<br>",
+  #                                         "Classification: ",new_NAA_Polygons$classification,"<br>",
+  #                                         "Design Value Site Name: ",new_NAA_Polygons$SiteName,"<br>",
+  #                                         "Design Value Site ID: ",new_NAA_Polygons$Monitor_ID,"<br>",
+  #                                         "Design Value Site 2020 DV: ",new_NAA_Polygons$Draft_DV_18_20))) %>%
   
   # # a polygon layer is added for the US states object and its outline color and opacity are set
   # addPolygons(data=US_states,
@@ -337,14 +339,40 @@ map_combined <- leaflet() %>%
   #             color = "black",
   #             fillColor = "transparent") %>%
   
+  # # add circle markers for the monitors
+  # addCircleMarkers(data = US_Pivot_Coords,
+  #                  ~Longitude,
+  #                  ~Latitude,
+  #                  popup = as.character(paste0("Site Name: ",US_Pivot_Coords$SiteName,"<br>",
+  #                                              "AQS ID: ",US_Pivot_Coords$Monitor_ID,"<br>",
+  #                                              "2020 4th Max: ",US_Pivot_Coords$`2020_4th_High`," ppb","<br>",
+  #                                              "# Days >70ppb: ",US_Pivot_Coords$`days_>70ppb`)),
+  #                  label = as.character(US_Pivot_Coords$SiteName),
+  #                  labelOptions = labelOptions(textsize = "15px"),
+  #                  color = ~monitorCol(O3_2020_4thMax),
+  #                  radius = 4,
+  #                  stroke = F, fillOpacity = 1,
+  #                  group = "2020 4th Max") %>%
+  # 
+  # # add circle markers for the monitors
+  # addCircleMarkers(data = US_2020DV,
+  #                  ~Longitude,
+  #                  ~Latitude,
+  #                  popup = as.character(paste0("Site Name: ",US_2020DV$SiteName,"<br>",
+  #                                              "AQS ID: ",US_2020DV$Monitor_ID,"<br>",
+  #                                              "2020 Draft DV: ",US_2020DV$Draft_DV_18_20," ppb")),
+  #                  label = as.character(US_2020DV$SiteName),
+  #                  labelOptions = labelOptions(textsize = "15px"),
+  #                  color = ~monitorCol(O3_NAAQS_Attainment),
+  #                  radius = 4,
+  #                  stroke = F, fillOpacity = 1,
+  #                  group = "2020 DV") %>%
+
   # add circle markers for the monitors
   addCircleMarkers(data = US_Pivot_Coords,
                    ~Longitude,
                    ~Latitude,
-                   popup = as.character(paste0("Site Name: ",US_Pivot_Coords$SiteName,"<br>",
-                                               "AQS ID: ",US_Pivot_Coords$Monitor_ID,"<br>",
-                                               "2020 4th Max: ",US_Pivot_Coords$`2020_4th_High`," ppb","<br>",
-                                               "# Days >70ppb: ",US_Pivot_Coords$`days_>70ppb`)),
+                   popup = popupTable(US_Pivot_Coords),
                    label = as.character(US_Pivot_Coords$SiteName),
                    labelOptions = labelOptions(textsize = "15px"),
                    color = ~monitorCol(O3_2020_4thMax),
@@ -356,16 +384,14 @@ map_combined <- leaflet() %>%
   addCircleMarkers(data = US_2020DV,
                    ~Longitude,
                    ~Latitude,
-                   popup = as.character(paste0("Site Name: ",US_2020DV$SiteName,"<br>",
-                                               "AQS ID: ",US_2020DV$Monitor_ID,"<br>",
-                                               "2020 Draft DV: ",US_2020DV$Draft_DV_18_20," ppb")),
+                   popup = popupTable(US_2020DV),
                    label = as.character(US_2020DV$SiteName),
                    labelOptions = labelOptions(textsize = "15px"),
                    color = ~monitorCol(O3_NAAQS_Attainment),
                    radius = 4,
                    stroke = F, fillOpacity = 1,
                    group = "2020 DV") %>%
-
+  
   # add legend for the ozone values
   addLegend('bottomleft', pal = monitorCol, values = US_Pivot_Coords$O3_2020_4thMax,
             title = '2020 Preliminary Ozone Values',opacity = 1) %>%
@@ -373,9 +399,9 @@ map_combined <- leaflet() %>%
   # adds radio buttons for switching layers between 4th max and DV values
   addLayersControl(baseGroups = c("2020 4th Max", "2020 DV"),options = layersControlOptions(collapsed = FALSE)) %>%
   
-  # add legend for the NAA classifications
-  addLegend('bottomright', pal = naa_pal, values = US_2015_O3_NAA$classification,
-            title = '2015 Ozone NAA Classifications',opacity = 1) %>%
+  # # add legend for the NAA classifications
+  # addLegend('bottomright', pal = naa_pal, values = US_2015_O3_NAA$classification,
+  #           title = '2015 Ozone NAA Classifications',opacity = 1) %>%
   
   # adds a title in the top of the map
   addControl(title, position = "topright", className="map-title")
@@ -385,8 +411,33 @@ map_combined <- leaflet() %>%
 map_combined
 
 #creates a filename
-htmlFileName <- paste0(YOC_folder,"2020_Draft_Ozone_Values_",Date_Today,".html")
+htmlFileName <- paste0(YOC_folder,"2020_Draft_Ozone_Values",".html")
 
 # exporting the map widget to a single html file
 saveWidget(map_combined, htmlFileName, selfcontained = TRUE)
+
+
 ```
+
+
+```{r, echo=FALSE}
+
+#uploads html file to SCMP website via FTP
+login <- "epiz_26445108"
+secret <- "d5mTGZejwP4jfn6"
+uploadSite1 <- "ftp://185.27.134.11//htdocs/ozone/"
+uploadFileName <- "2020_Draft_Ozone_Values"
+
+ftpUpload(htmlFileName,
+          paste0(uploadSite,uploadFileName,".html"),
+          verbose = TRUE,
+          userpwd = paste0(login,":",secret))
+
+
+
+         
+
+
+
+
+
